# Rolly

./: CMakeLists.txt  Makefile  README.md  app  build.sh  build_linux.sh  build_windows.ps1  imgui.ini
docs/: API.md  PROJECT_DOC.md
src/: common.h  main.c
src/lib/UI/: ui.cpp  ui.h
src/lib/UI/imgui/: imconfig.h
src/lib/UI/imgui/backends/: imgui_impl_opengl3.cpp
src/lib/audio/: audio.c  audio.h
src/lib/render/: render.c  render.h
src/lib/render/camera/: camera.c  camera.h
src/lib/win/: window.c  window.h
